[workspace]
resolver = "3"
members = ["brume", "io_http", "bmime"]

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
bytes = "1.11.1"
rust-crypto = "0.2.36"
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0"
tokio = "^1.44"
