[package]
name = "io_http"
version = "0.1.0"
edition = "2024"

[dependencies]
"bmime" = { path = "../bmime" }

async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
rust-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
